tests/rosetta/out/cpp/99-bottles-of-beer-2.error
g++: exit status 1
/tmp/99-bottles-of-beer-2.cpp: In function ‘std::vector<std::__cxx11::basic_string<char> > fields(std::string)’:
/tmp/99-bottles-of-beer-2.cpp:7:48: error: wrong number of template arguments (0, should be at least 1)
    7 |   std::vector<std::string> words = std::vector<>{};
      |                                                ^
In file included from /usr/include/c++/13/vector:66,
                 from /tmp/99-bottles-of-beer-2.cpp:4:
/usr/include/c++/13/bits/stl_vector.h:428:11: note: provided for ‘template<class _Tp, class _Alloc> class std::vector’
  428 |     class vector : protected _Vector_base<_Tp, _Alloc>
      |           ^~~~~~
/tmp/99-bottles-of-beer-2.cpp: In function ‘std::string numberName(int)’:
/tmp/99-bottles-of-beer-2.cpp:66:48: error: no matching function for call to ‘stoi(int)’
   66 |     std::vector<std::string> t = tens[std::stoi(((n / 10)))];
      |                                       ~~~~~~~~~^~~~~~~~~~~~
In file included from /usr/include/c++/13/string:54,
                 from /usr/include/c++/13/bits/locale_classes.h:40,
                 from /usr/include/c++/13/bits/ios_base.h:41,
                 from /usr/include/c++/13/ios:44,
                 from /usr/include/c++/13/ostream:40,
                 from /usr/include/c++/13/iostream:41,
                 from /tmp/99-bottles-of-beer-2.cpp:2:
/usr/include/c++/13/bits/basic_string.h:4120:3: note: candidate: ‘int std::__cxx11::stoi(const std::string&, std::size_t*, int)’
 4120 |   stoi(const string& __str, size_t* __idx = 0, int __base = 10)
      |   ^~~~
/usr/include/c++/13/bits/basic_string.h:4120:22: note:   no known conversion for argument 1 from ‘int’ to ‘const std::string&’ {aka ‘const std::__cxx11::basic_string<char>&’}
 4120 |   stoi(const string& __str, size_t* __idx = 0, int __base = 10)
      |        ~~~~~~~~~~~~~~^~~~~
/usr/include/c++/13/bits/basic_string.h:4272:3: note: candidate: ‘int std::__cxx11::stoi(const std::wstring&, std::size_t*, int)’
 4272 |   stoi(const wstring& __str, size_t* __idx = 0, int __base = 10)
      |   ^~~~
/usr/include/c++/13/bits/basic_string.h:4272:23: note:   no known conversion for argument 1 from ‘int’ to ‘const std::wstring&’ {aka ‘const std::__cxx11::basic_string<wchar_t>&’}
 4272 |   stoi(const wstring& __str, size_t* __idx = 0, int __base = 10)
      |        ~~~~~~~~~~~~~~~^~~~~
/tmp/99-bottles-of-beer-2.cpp:69:15: error: no match for ‘operator+’ (operand types are ‘std::vector<std::__cxx11::basic_string<char> >’ and ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’})
   69 |       t = ((t + std::string(" ")) + small[s]);
      |             ~ ^      ~~~~~~~~~~~
      |             |        |
      |             |        std::string {aka std::__cxx11::basic_string<char>}
      |             std::vector<std::__cxx11::basic_string<char> >
In file included from /usr/include/c++/13/string:48:
/usr/include/c++/13/bits/stl_iterator.h:634:5: note: candidate: ‘template<class _Iterator> constexpr std::reverse_iterator<_IteratorL> std::operator+(typename reverse_iterator<_IteratorL>::difference_type, const reverse_iterator<_IteratorL>&)’
  634 |     operator+(typename reverse_iterator<_Iterator>::difference_type __n,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:634:5: note:   template argument deduction/substitution failed:
/tmp/99-bottles-of-beer-2.cpp:69:32: note:   ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’} is not derived from ‘const std::reverse_iterator<_IteratorL>’
   69 |       t = ((t + std::string(" ")) + small[s]);
      |                                ^
/usr/include/c++/13/bits/stl_iterator.h:1808:5: note: candidate: ‘template<class _Iterator> constexpr std::move_iterator<_IteratorL> std::operator+(typename move_iterator<_IteratorL>::difference_type, const move_iterator<_IteratorL>&)’
 1808 |     operator+(typename move_iterator<_Iterator>::difference_type __n,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1808:5: note:   template argument deduction/substitution failed:
/tmp/99-bottles-of-beer-2.cpp:69:32: note:   ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’} is not derived from ‘const std::move_iterator<_IteratorL>’
   69 |       t = ((t + std::string(" ")) + small[s]);
      |                                ^
/usr/include/c++/13/bits/basic_string.h:3553:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> constexpr std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3553 |     operator+(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3553:5: note:   template argument deduction/substitution failed:
/tmp/99-bottles-of-beer-2.cpp:69:32: note:   ‘std::vector<std::__cxx11::basic_string<char> >’ is not derived from ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’
   69 |       t = ((t + std::string(" ")) + small[s]);
      |                                ^
/usr/include/c++/13/bits/basic_string.h:3571:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> constexpr std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(const _CharT*, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3571 |     operator+(const _CharT* __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3571:5: note:   template argument deduction/substitution failed:
/tmp/99-bottles-of-beer-2.cpp:69:32: note:   mismatched types ‘const _CharT*’ and ‘std::vector<std::__cxx11::basic_string<char> >’
   69 |       t = ((t + std::string(" ")) + small[s]);
      |                                ^
/usr/include/c++/13/bits/basic_string.h:3590:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> constexpr std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(_CharT, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3590 |     operator+(_CharT __lhs, const basic_string<_CharT,_Traits,_Alloc>& __rhs)
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3590:5: note:   template argument deduction/substitution failed:
/tmp/99-bottles-of-beer-2.cpp:69:32: note:   deduced conflicting types for parameter ‘_CharT’ (‘std::vector<std::__cxx11::basic_string<char> >’ and ‘char’)
   69 |       t = ((t + std::string(" ")) + small[s]);
      |                                ^
/usr/include/c++/13/bits/basic_string.h:3607:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> constexpr std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, const _CharT*)’
 3607 |     operator+(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3607:5: note:   template argument deduction/substitution failed:
/tmp/99-bottles-of-beer-2.cpp:69:32: note:   ‘std::vector<std::__cxx11::basic_string<char> >’ is not derived from ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’
   69 |       t = ((t + std::string(" ")) + small[s]);
      |                                ^
/usr/include/c++/13/bits/basic_string.h:3625:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> constexpr std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, _CharT)’
 3625 |     operator+(const basic_string<_CharT, _Traits, _Alloc>& __lhs, _CharT __rhs)
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3625:5: note:   template argument deduction/substitution failed:
/tmp/99-bottles-of-beer-2.cpp:69:32: note:   ‘std::vector<std::__cxx11::basic_string<char> >’ is not derived from ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’
   69 |       t = ((t + std::string(" ")) + small[s]);
      |                                ^
/usr/include/c++/13/bits/basic_string.h:3637:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> constexpr std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(__cxx11::basic_string<_CharT, _Traits, _Allocator>&&, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3637 |     operator+(basic_string<_CharT, _Traits, _Alloc>&& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3637:5: note:   template argument deduction/substitution failed:
/tmp/99-bottles-of-beer-2.cpp:69:32: note:   ‘std::vector<std::__cxx11::basic_string<char> >’ is not derived from ‘std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’
   69 |       t = ((t + std::string(" ")) + small[s]);
      |                                ^
/usr/include/c++/13/bits/basic_string.h:3644:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> constexpr std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, __cxx11::basic_string<_CharT, _Traits, _Allocator>&&)’
 3644 |     operator+(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3644:5: note:   template argument deduction/substitution failed:
/tmp/99-bottles-of-beer-2.cpp:69:32: note:   ‘std::vector<std::__cxx11::basic_string<char> >’ is not derived from ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’
   69 |       t = ((t + std::string(" ")) + small[s]);
      |                                ^
/usr/include/c++/13/bits/basic_string.h:3651:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> constexpr std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(__cxx11::basic_string<_CharT, _Traits, _Allocator>&&, __cxx11::basic_string<_CharT, _Traits, _Allocator>&&)’
 3651 |     operator+(basic_string<_CharT, _Traits, _Alloc>&& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3651:5: note:   template argument deduction/substitution failed:
/tmp/99-bottles-of-beer-2.cpp:69:32: note:   ‘std::vector<std::__cxx11::basic_string<char> >’ is not derived from ‘std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’
   69 |       t = ((t + std::string(" ")) + small[s]);
      |                                ^
/usr/include/c++/13/bits/basic_string.h:3674:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> constexpr std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(const _CharT*, __cxx11::basic_string<_CharT, _Traits, _Allocator>&&)’
 3674 |     operator+(const _CharT* __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3674:5: note:   template argument deduction/substitution failed:
/tmp/99-bottles-of-beer-2.cpp:69:32: note:   mismatched types ‘const _CharT*’ and ‘std::vector<std::__cxx11::basic_string<char> >’
   69 |       t = ((t + std::string(" ")) + small[s]);
      |                                ^
/usr/include/c++/13/bits/basic_string.h:3681:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> constexpr std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(_CharT, __cxx11::basic_string<_CharT, _Traits, _Allocator>&&)’
 3681 |     operator+(_CharT __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3681:5: note:   template argument deduction/substitution failed:
/tmp/99-bottles-of-beer-2.cpp:69:32: note:   deduced conflicting types for parameter ‘_CharT’ (‘std::vector<std::__cxx11::basic_string<char> >’ and ‘char’)
   69 |       t = ((t + std::string(" ")) + small[s]);
      |                                ^
/usr/include/c++/13/bits/basic_string.h:3688:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> constexpr std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(__cxx11::basic_string<_CharT, _Traits, _Allocator>&&, const _CharT*)’
 3688 |     operator+(basic_string<_CharT, _Traits, _Alloc>&& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3688:5: note:   template argument deduction/substitution failed:
/tmp/99-bottles-of-beer-2.cpp:69:32: note:   ‘std::vector<std::__cxx11::basic_string<char> >’ is not derived from ‘std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’
   69 |       t = ((t + std::string(" ")) + small[s]);
      |                                ^
/usr/include/c++/13/bits/basic_string.h:3695:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> constexpr std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(__cxx11::basic_string<_CharT, _Traits, _Allocator>&&, _CharT)’
 3695 |     operator+(basic_string<_CharT, _Traits, _Alloc>&& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3695:5: note:   template argument deduction/substitution failed:
/tmp/99-bottles-of-beer-2.cpp:69:32: note:   ‘std::vector<std::__cxx11::basic_string<char> >’ is not derived from ‘std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’
   69 |       t = ((t + std::string(" ")) + small[s]);
      |                                ^
/tmp/99-bottles-of-beer-2.cpp:71:12: error: could not convert ‘t’ from ‘std::vector<std::__cxx11::basic_string<char> >’ to ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’}
   71 |     return t;
      |            ^
      |            |
      |            std::vector<std::__cxx11::basic_string<char> >
/tmp/99-bottles-of-beer-2.cpp: In function ‘std::string slur(std::string, int)’:
/tmp/99-bottles-of-beer-2.cpp:96:44: error: wrong number of template arguments (0, should be at least 1)
   96 |   std::vector<std::string> a = std::vector<>{};
      |                                            ^
/usr/include/c++/13/bits/stl_vector.h:428:11: note: provided for ‘template<class _Tp, class _Alloc> class std::vector’
  428 |     class vector : protected _Vector_base<_Tp, _Alloc>
      |           ^~~~~~
